--- a/Assignment_Day5.ipynb
+++ b/Assignment_Day5.ipynb
@@ -2,49 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "11\n",
-      "13\n",
-      "17\n",
-      "19\n",
-      "23\n",
-      "29\n",
-      "31\n",
-      "37\n",
-      "41\n",
-      "43\n",
-      "47\n",
-      "53\n",
-      "59\n",
-      "61\n",
-      "67\n",
-      "71\n",
-      "73\n",
-      "79\n",
-      "83\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = 11\n",
-    "b = 85\n",
-    "  \n",
-    "for i in range(a,b): \n",
-    "    for j in range(2,i): \n",
-    "        if(i % j==0): \n",
-    "            break\n",
-    "    else: \n",
-    "        print(i) "
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -52,149 +9,151 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hamdan\n",
-      "hamdan\n",
-      "   Hamdan Hakeem    \n",
-      "1\n",
-      "b'Hamdan@'\n",
-      "False\n",
-      "H e l l o\n",
-      "7\n",
-      "7\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n"
+      "1 3\n",
+      "2 5\n",
+      "3 7\n",
+      "4 11\n",
+      "5 13\n",
+      "6 17\n",
+      "7 19\n",
+      "8 23\n",
+      "9 29\n",
+      "10 31\n",
+      "11 37\n",
+      "12 41\n",
+      "13 43\n",
+      "14 47\n",
+      "15 53\n",
+      "16 59\n",
+      "17 61\n",
+      "18 67\n",
+      "19 71\n",
+      "20 73\n"
      ]
     }
    ],
    "source": [
-    "a = \"hamdan\"\n",
-    "x=a.capitalize()\n",
-    "print(x)\n",
-    "b = \"Hamdan\"\n",
-    "x=b.casefold()\n",
-    "print(x)\n",
-    "c = \"Hamdan Hakeem\"\n",
-    "x=c.center(20)\n",
-    "print(x)\n",
-    "d = \"Hamdan Hakeem\"\n",
-    "x=d.count(\"Hakeem\")\n",
-    "print(x)\n",
-    "e = \"Hamdan@\"\n",
-    "x=e.encode()\n",
-    "print(x)\n",
-    "f = \"Hamdan.\"\n",
-    "x=f.endswith(',.')\n",
-    "print(x)\n",
-    "g = \"H\\te\\tl\\tl\\to\"\n",
-    "x=g.expandtabs(2)\n",
-    "print(x)\n",
-    "h = \"Hamdan Hakeem\"\n",
-    "x=h.find(\"Hakeem\")\n",
-    "print(x)\n",
-    "i = \"Hamdan Hakeem\"\n",
-    "x=i.index(\"Hakeem\")\n",
-    "print(x)\n",
-    "j = \"Hamdan12\"\n",
-    "x=j.isalnum()\n",
-    "print(x)\n",
-    "k = \"HamdanX\"\n",
-    "x=k.isalpha()\n",
-    "print(x)\n",
-    "l = \"\\u0033\"\n",
-    "x=l.isdecimal()\n",
-    "print(x)\n",
-    "m = \"123456\"\n",
-    "x=m.isdigit()\n",
-    "print(x)\n",
-    "n = \"hamdan\"\n",
-    "x=n.islower()\n",
-    "print(x)\n",
-    "o = \"123456\"\n",
-    "x=o.isnumeric()\n",
-    "print(x)"
+    "c = 0\n",
+    "f = 0\n",
+    "for i in range(2,100):\n",
+    "    if c == 20:\n",
+    "        break\n",
+    "    f = 0\n",
+    "    for j in range(2,i):\n",
+    "            if i%j == 0 :\n",
+    "                f = 1\n",
+    "    if f != 1 :\n",
+    "        if i%2 != 0:\n",
+    "            c = c+1\n",
+    "            print(c,i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The strings are anagrams.\n"
+      "1. capitalize()\t Hi how are you\n",
+      "2. casefold()\t hi how are you\n",
+      "3. center()\t ---hi how are You---\n",
+      "4. count()\t 2\n",
+      "5. endswith()\t True\n",
+      "6. find()\t 13\n",
+      "7. index()\t 13\n",
+      "8. isalnum()\t True\n",
+      "9. isalpha()\t True\n",
+      "10. split()\t ['hi', 'how', 'are', 'You']\n",
+      "11. upper()\t HI HOW ARE YOU\n",
+      "12. isupper()\t True\n",
+      "13. lower()\t rajendra\n",
+      "14. islower()\t True\n",
+      "15. title()\t Hi How Are You\n",
+      "16. replace()\t Hi Rajendr how are You\n",
+      "17. join()\t Hey How Are You\n"
      ]
     }
    ],
    "source": [
-    "# function to check if two strings are \n",
-    "# anagram or not  \n",
-    "def check(s1, s2): \n",
-    "      \n",
-    "    # the sorted strings are checked  \n",
-    "    if(sorted(s1)== sorted(s2)): \n",
-    "        print(\"The strings are anagrams.\")  \n",
-    "    else: \n",
-    "        print(\"The strings aren't anagrams.\")          \n",
-    "          \n",
-    "# driver code   \n",
-    "s1 =\"listen\"\n",
-    "s2 =\"silent\" \n",
-    "check(s1, s2)\n"
+    "string = \"hi how are You\"\n",
+    "a = [\"Hey\", \"How\", \"Are\", \"You\"]\n",
+    "string1 = \"RAJENDRA\"\n",
+    "string2 = string1.lower()\n",
+    "print(\"1. capitalize()\\t\", string.capitalize())\n",
+    "print(\"2. casefold()\\t\", string.casefold())\n",
+    "print(\"3. center()\\t\", string.center(20,'-'))\n",
+    "print(\"4. count()\\t\", string.count('h'))\n",
+    "print(\"5. endswith()\\t\", string.endswith(\"u\"))\n",
+    "print(\"6. find()\\t\", string.find(\"u\"))\n",
+    "print(\"7. index()\\t\", string.index(\"u\"))\n",
+    "print(\"8. isalnum()\\t\", string1.isalnum())\n",
+    "print(\"9. isalpha()\\t\", string1.isalpha())\n",
+    "print(\"10. split()\\t\",string.split())\n",
+    "print(\"11. upper()\\t\",string.upper())\n",
+    "print(\"12. isupper()\\t\",string1.isupper())\n",
+    "print(\"13. lower()\\t\",string1.lower())\n",
+    "print(\"14. islower()\\t\",string2.islower())\n",
+    "print(\"15. title()\\t\",string.title())\n",
+    "print(\"16. replace()\\t\",string.replace(\"hi\",\"Hi Rajendr\"))\n",
+    "print(\"17. join()\\t\",\" \".join(a))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original String : Ge;ek * s:fo ! r;Ge * e*k:s !\n",
-      "Resultant list is : Geek  sfo  rGe  eks \n"
+      "Enter your 1st string = Hamhh\n",
+      "Enter your 2nd string = Hjhjh\n",
+      "None of them\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'geek  sfo  rge  eks '"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
+    "s1 = input(\"Enter your 1st string = \").lower()\n",
+    "s2 = input(\"Enter your 2nd string = \").lower()\n",
+    "def isPalindrome(s):\n",
+    "    return s == s[::-1]\n",
+    "if isPalindrome(s1) or sorted(s1) == sorted(s2):\n",
+    "    if isPalindrome(s1):\n",
+    "        print(\"Palindrome\")\n",
     "\n",
-    "  \n",
-    "# initializing bad_chars_list \n",
-    "bad_chars = [';', ':', '!', \"*\"] \n",
-    " \n",
-    "test_string = \"Ge;ek * s:fo ! r;Ge * e*k:s !\"\n",
-    "  \n",
-    " \n",
-    "print (\"Original String : \" + test_string) \n",
-    "  \n",
-    "# using replace() to  \n",
-    "# remove bad_chars  \n",
-    "for i in bad_chars : \n",
-    "    test_string = test_string.replace(i, '') \n",
-    " \n",
-    "\n",
-    "print (\"Resultant list is : \" + (test_string))\n",
-    "def remove(test_string):\n",
-    "    return test_string.replace(\" \", \"\") \n",
-    "\n",
-    "test_string.lower()\n",
-    "#print(remove(test_string))"
+    "    if sorted(s1) == sorted(s2):\n",
+    "        print(\"Anagram\")\n",
+    "else:\n",
+    "    print(\"None of them\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "drdarshaningleaimltrainer\n"
+     ]
+    }
+   ],
+   "source": [
+    "a= \"Dr. Darshan Ingle @AIML Trainer\"\n",
+    "def charRemover(string):\n",
+    "    char = ['!', '~', '@', '#', '$', '%','.',\" \"]\n",
+    "    for i in char:\n",
+    "        string = string.replace(i,'')\n",
+    "    s1 = (string.lower())\n",
+    "    print(s1)\n",
+    "charRemover(a)\n",
+    "  \n"
    ]
   }
  ],
