--- a/Assignment_Day5.ipynb
+++ b/Assignment_Day5.ipynb
@@ -80,7 +80,7 @@
    "source": [
     "string = \"hi how are You\"\n",
     "a = [\"Hey\", \"How\", \"Are\", \"You\"]\n",
-    "string1 = \"RAJENDRA\"\n",
+    "string1 = \"HAMDAN\"\n",
     "string2 = string1.lower()\n",
     "print(\"1. capitalize()\\t\", string.capitalize())\n",
     "print(\"2. casefold()\\t\", string.casefold())\n",
